--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     <script src = "Questions.js"></script>
   </head>
   <body>
-    <header role="banner">
-      <img src = "MediaFile/NarutoShippuden.png" alt = "Naruto Shippuden Logo" >
+    <header role="banner"><h1>
+      <img src = "MediaFile/NarutoShippuden.png" alt = "Naruto Shippuden Logo" ></h1>
       <section class = "startingMessage"><h2 class = "startingQuestion">Are you ready to test your Naruto Shippuden knowledge?</h2></section>
        <button class="startButton">Start</a>
     </header>
